--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
             "App\\": "app/"
         }
     },
-    "require": {
-        "php": "^7.4.0"
+    "config": {
+        "platform": {
+            "php": "7.4.3"
+        }
     }
 }
